Add user swagger
