# src/swagger.yaml
@@ -870,6 +870,81 @@ paths:
           description: Server internal error
       security:
         - api_key: []
+  /user:
+    get:
+      summary: get current user
+      tags:
+        - user
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: true
+                  message:
+                    type: string
+                    example: string
+                  data:
+                    type: object
+                    $ref: '#/components/schemas/User'      
+        '400':
+          description: Invalid ID supplied
+        '500':
+          description: Server internal error
+      security:
+        - api_key: []
+    patch:
+      summary: update current user
+      tags:
+        - user
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                avatarUrl:          
+                  type: string
+                first_name:          
+                  type: string
+                last_name:          
+                  type: string
+                birth_date:          
+                  type: string
+                location_id:          
+                  type: string
+                location_mainText:
+                  type: string
+                location_address:
+                  type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: true
+                  message:
+                    type: string
+                    example: string
+                  data:
+                    type: object
+                    $ref: '#/components/schemas/Apply_get'      
+        '400':
+          description: Invalid ID supplied
+        '500':
+          description: Server internal error
+      security:
+        - api_key: []
 components:
   schemas:
     Apply_post:
@@ -1240,6 +1315,15 @@ components:
           enum:
             - 'male'
             - 'female'
+        location_id:
+          type: string
+          example: "string"
+        location_mainText:
+          type: string
+          example: "string"
+        location_address:
+          type: string
+          example: "string"
         createdAt:
           type: string
           example: "string"
